Fix home styling on smaller screens, clearer summary

--- a/front-end/src/Home.css
+++ b/front-end/src/Home.css
@@ -27,3 +27,9 @@
   text-overflow: ellipsis;
   overflow: hidden !important;
 }
+
+@media (max-height: 720px) {
+  .preview {
+    height: 100px;
+  }
+}
